--- a/checkout.html
+++ b/checkout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,23 +8,28 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <style>
         * {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
         }
+
         body {
             background: linear-gradient(to bottom, #fafbfc 0%, #ffffff 100%);
         }
+
         .gradient-text {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
         }
+
         .gradient-bg {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         }
+
         input[type="text"],
         input[type="number"] {
             border: 2px solid #e5e7eb;
@@ -33,6 +39,7 @@
             font-size: 1rem;
             transition: all 0.2s;
         }
+
         input[type="text"]:focus,
         input[type="number"]:focus {
             outline: none;
@@ -48,17 +55,15 @@
         Hotjar.init(siteId, hotjarVersion);
     </script>
 </head>
+
 <body class="antialiased">
     <!-- Navigation -->
     <nav class="bg-white/80 backdrop-blur-md border-b border-gray-100 sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <a href="index.html" class="text-2xl font-bold gradient-text">MasterPlan</a>
-                <div class="flex items-center space-x-3">
-                    <div class="w-10 h-10 bg-gradient-to-br from-indigo-600 to-purple-600 rounded-full flex items-center justify-center text-white font-semibold">
-                        S
-                    </div>
-                    <span class="font-semibold text-gray-900">Sofia</span>
+                <div id="user-profile-section" class="flex items-center space-x-3">
+                    <!-- User profile will be populated by auth-state.js -->
                 </div>
             </div>
         </div>
@@ -98,9 +103,10 @@
                     </div>
                 </div>
             </div>
-            
+
             <!-- Order Summary -->
-            <div class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border border-indigo-100 p-8 shadow-sm">
+            <div
+                class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border border-indigo-100 p-8 shadow-sm">
                 <h2 class="text-2xl font-bold text-gray-900 mb-6">Order Summary</h2>
                 <div class="space-y-4 mb-6">
                     <div class="flex justify-between items-center text-lg">
@@ -118,7 +124,8 @@
                         <span class="text-3xl font-bold gradient-text">$60.00</span>
                     </div>
                 </div>
-                <a href="success.html" class="gradient-bg text-white text-center py-4 rounded-xl font-bold text-lg hover:shadow-2xl transition-all transform hover:-translate-y-1 block w-full">
+                <a href="success.html"
+                    class="gradient-bg text-white text-center py-4 rounded-xl font-bold text-lg hover:shadow-2xl transition-all transform hover:-translate-y-1 block w-full">
                     Pay & Activate Pro
                 </a>
                 <p class="text-xs text-center text-gray-500 mt-4">
@@ -127,5 +134,8 @@
             </div>
         </div>
     </main>
+
+    <script type="module" src="./js/auth-state.js"></script>
 </body>
+
 </html>
