--- a/dashboard.html
+++ b/dashboard.html
@@ -66,11 +66,7 @@
                     <a href="pricing.html" id="nav-pricing"
                         class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Pricing</a>
                     <div id="user-profile-section" class="flex items-center space-x-3">
-                        <div
-                            class="w-10 h-10 avatar-gradient rounded-full flex items-center justify-center text-white font-semibold">
-                            S
-                        </div>
-                        <span class="font-semibold text-gray-900">Sofia</span>
+                        <!-- User profile will be populated by auth-state.js -->
                     </div>
                 </div>
             </div>
