--- a/success.html
+++ b/success.html
@@ -68,12 +68,8 @@
                         class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Simulator</a>
                     <a href="pricing.html" id="nav-pricing"
                         class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Pricing</a>
-                    <div class="flex items-center space-x-3">
-                        <div
-                            class="w-10 h-10 bg-gradient-to-br from-indigo-600 to-purple-600 rounded-full flex items-center justify-center text-white font-semibold">
-                            S
-                        </div>
-                        <span class="font-semibold text-gray-900">Sofia</span>
+                    <div id="user-profile-section" class="flex items-center space-x-3">
+                        <!-- User profile will be populated by auth-state.js -->
                     </div>
                 </div>
             </div>
