Hide Dashboard/Simulator nav links by default until user is authenticated

--- a/success.html
+++ b/success.html
@@ -62,9 +62,9 @@
             <div class="flex justify-between items-center">
                 <a href="index.html" class="text-2xl font-bold gradient-text">MasterPlan</a>
                 <div class="hidden md:flex items-center space-x-8">
-                    <a href="dashboard.html" id="nav-dashboard"
+                    <a href="dashboard.html" id="nav-dashboard" style="display: none"
                         class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Dashboard</a>
-                    <a href="simulator.html" id="nav-simulator"
+                    <a href="simulator.html" id="nav-simulator" style="display: none"
                         class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Simulator</a>
                     <a href="pricing.html" id="nav-pricing"
                         class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Pricing</a>
