--- a/simulator.html
+++ b/simulator.html
@@ -245,18 +245,14 @@
             <div class="flex justify-between items-center">
                 <a href="index.html" class="text-2xl font-bold gradient-text">MasterPlan</a>
                 <div class="hidden md:flex items-center space-x-8">
-                    <a href="dashboard.html" id="nav-dashboard"
+                    <a href="dashboard.html" id="nav-dashboard" style="display: none"
                         class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Dashboard</a>
                     <a href="simulator.html" id="nav-simulator"
                         class="text-gray-900 font-semibold border-b-2 border-indigo-600 pb-1">Simulator</a>
                     <a href="pricing.html" id="nav-pricing"
                         class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Pricing</a>
                     <div id="user-profile-section" class="flex items-center space-x-3">
-                        <div
-                            class="w-10 h-10 bg-gray-200 rounded-full flex items-center justify-center text-gray-600 font-semibold">
-                            G
-                        </div>
-                        <span class="font-medium text-gray-700">Guest</span>
+                        <!-- User profile will be populated by auth-state.js -->
                     </div>
                 </div>
             </div>
