Phase 1: Update spacing system across all pages (reduce by ~50%)

--- a/checkout.html
+++ b/checkout.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Complete Your Upgrade - MasterPlan</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="design-tokens.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
@@ -70,12 +71,12 @@
     </nav>
 
     <!-- Main Content -->
-    <main class="max-w-5xl mx-auto px-6 py-12">
-        <h1 class="text-4xl md:text-5xl font-bold text-center text-gray-900 mb-12">Complete Your Upgrade</h1>
+    <main class="max-w-5xl mx-auto px-6 py-6">
+        <h1 class="text-4xl md:text-5xl font-bold text-center text-gray-900 mb-6">Complete Your Upgrade</h1>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
             <!-- Payment Form -->
-            <div class="bg-white rounded-2xl border border-gray-200 p-8 shadow-sm">
+            <div class="bg-white rounded-2xl border border-gray-200 p-5 shadow-sm">
                 <h2 class="text-2xl font-bold text-gray-900 mb-6">Payment Details</h2>
                 <div class="space-y-5">
                     <div>
@@ -106,7 +107,7 @@
 
             <!-- Order Summary -->
             <div
-                class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border border-indigo-100 p-8 shadow-sm">
+                class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border border-indigo-100 p-5 shadow-sm">
                 <h2 class="text-2xl font-bold text-gray-900 mb-6">Order Summary</h2>
                 <div class="space-y-4 mb-6">
                     <div class="flex justify-between items-center text-lg">
