--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MasterPlan - Your Complete Financial Roadmap for Graduate Studies</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="design-tokens.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
@@ -145,10 +146,10 @@
         <div class="max-w-7xl mx-auto px-6">
             <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-900 mb-4">See Where Our Planners Are Now
             </h2>
-            <p class="text-center text-gray-600 mb-12 max-w-2xl mx-auto">
+            <p class="text-center text-gray-600 mb-6 max-w-2xl mx-auto">
                 Join hundreds of students who have successfully planned their graduate studies abroad
             </p>
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
                 <div class="text-center card-hover p-6 rounded-2xl bg-gradient-to-br from-indigo-50 to-purple-50">
                     <div class="w-20 h-20 rounded-full mx-auto mb-4 overflow-hidden ring-4 ring-white shadow-lg">
                         <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=200&h=200&fit=crop&crop=faces"
@@ -190,9 +191,9 @@
     </section>
 
     <!-- Social Proof Section -->
-    <section class="bg-gray-50 py-16">
+    <section class="bg-gray-50 py-8">
         <div class="max-w-7xl mx-auto px-6">
-            <h2 class="text-center text-lg font-semibold text-gray-500 mb-8 uppercase tracking-wide">As featured in</h2>
+            <h2 class="text-center text-lg font-semibold text-gray-500 mb-4 uppercase tracking-wide">As featured in</h2>
             <div class="flex flex-wrap justify-center items-center gap-12 opacity-60">
                 <div class="text-2xl font-bold text-gray-400">Forbes</div>
                 <div class="text-2xl font-bold text-gray-400">TechCrunch</div>
@@ -213,8 +214,8 @@
                     Comprehensive tools designed to give you complete financial clarity
                 </p>
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                <div class="card-hover bg-white p-8 rounded-2xl border border-gray-100 shadow-sm">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+                <div class="card-hover bg-white p-5 rounded-2xl border border-gray-100 shadow-sm">
                     <div class="w-14 h-14 gradient-bg rounded-xl flex items-center justify-center mb-6">
                         <svg class="w-7 h-7 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -228,7 +229,7 @@
                         tuition, living costs, and your available resources.
                     </p>
                 </div>
-                <div class="card-hover bg-white p-8 rounded-2xl border border-gray-100 shadow-sm">
+                <div class="card-hover bg-white p-5 rounded-2xl border border-gray-100 shadow-sm">
                     <div class="w-14 h-14 gradient-bg rounded-xl flex items-center justify-center mb-6">
                         <svg class="w-7 h-7 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -242,7 +243,7 @@
                         feasibility across different universities.
                     </p>
                 </div>
-                <div class="card-hover bg-white p-8 rounded-2xl border border-gray-100 shadow-sm">
+                <div class="card-hover bg-white p-5 rounded-2xl border border-gray-100 shadow-sm">
                     <div class="w-14 h-14 gradient-bg rounded-xl flex items-center justify-center mb-6">
                         <svg class="w-7 h-7 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -277,9 +278,9 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-gray-900 text-gray-300 py-12">
+    <footer class="bg-gray-900 text-gray-300 py-6">
         <div class="max-w-7xl mx-auto px-6">
-            <div class="grid grid-cols-2 md:grid-cols-5 gap-8 mb-8">
+            <div class="grid grid-cols-2 md:grid-cols-5 gap-4 mb-4">
                 <div class="col-span-2">
                     <h3 class="text-2xl font-bold text-white mb-4">MasterPlan</h3>
                     <p class="text-gray-400 text-sm leading-relaxed">
