--- a/pricing.html
+++ b/pricing.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pricing - MasterPlan</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="design-tokens.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
@@ -70,7 +71,7 @@
     </nav>
 
     <!-- Main Content -->
-    <main class="max-w-7xl mx-auto px-6 py-16">
+    <main class="max-w-7xl mx-auto px-6 py-8">
         <div class="text-center mb-16">
             <h1 class="text-4xl md:text-6xl font-bold text-gray-900 mb-4">
                 Your Complete Financial Roadmap
@@ -81,9 +82,9 @@
         </div>
 
         <!-- Pricing Table -->
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-5xl mx-auto">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 max-w-5xl mx-auto">
             <!-- Free Plan -->
-            <div class="card-hover bg-white rounded-2xl border-2 border-gray-200 p-8 flex flex-col">
+            <div class="card-hover bg-white rounded-2xl border-2 border-gray-200 p-5 flex flex-col">
                 <div class="flex-grow">
                     <div class="mb-6">
                         <h2 class="text-2xl font-bold text-gray-900 mb-2">Free Plan</h2>
@@ -92,7 +93,7 @@
                         </div>
                         <p class="text-gray-600 mt-4">Get a clear estimate of your total costs and funding gap.</p>
                     </div>
-                    <ul class="space-y-4 mb-8">
+                    <ul class="space-y-4 mb-4">
                         <li class="flex items-start">
                             <svg class="w-6 h-6 text-green-500 mr-3 flex-shrink-0 mt-0.5" fill="none"
                                 stroke="currentColor" viewBox="0 0 24 24">
@@ -150,7 +151,7 @@
 
             <!-- Pro Plan -->
             <div
-                class="card-hover bg-gradient-to-br from-indigo-600 to-purple-600 rounded-2xl border-2 border-indigo-500 p-8 flex flex-col relative overflow-hidden">
+                class="card-hover bg-gradient-to-br from-indigo-600 to-purple-600 rounded-2xl border-2 border-indigo-500 p-5 flex flex-col relative overflow-hidden">
                 <div
                     class="absolute top-4 right-4 bg-yellow-400 text-yellow-900 text-xs font-bold px-3 py-1 rounded-full">
                     POPULAR
@@ -168,7 +169,7 @@
                         <p class="text-indigo-100 mt-4">Your entire Master's journey covered. No subscriptions, no
                             surprises.</p>
                     </div>
-                    <ul class="space-y-4 mb-8">
+                    <ul class="space-y-4 mb-4">
                         <li class="flex items-start">
                             <svg class="w-6 h-6 text-white mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor"
                                 viewBox="0 0 24 24">
@@ -228,8 +229,8 @@
 
         <!-- Social Proof Section -->
         <div class="max-w-5xl mx-auto mt-16 mb-16">
-            <div class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border-2 border-indigo-200 p-8">
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-8">
+            <div class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border-2 border-indigo-200 p-5">
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-4">
                     <div class="text-center">
                         <div class="text-4xl font-bold text-indigo-600 mb-2">1,247</div>
                         <p class="text-gray-600">Students planned their Master's this month</p>
@@ -265,7 +266,7 @@
 
         <!-- FAQ Section -->
         <div class="max-w-3xl mx-auto mt-20">
-            <h2 class="text-3xl font-bold text-center text-gray-900 mb-12">Frequently Asked Questions</h2>
+            <h2 class="text-3xl font-bold text-center text-gray-900 mb-6">Frequently Asked Questions</h2>
             <div class="space-y-6">
                 <div class="bg-white rounded-xl border border-gray-200 p-6">
                     <h3 class="font-bold text-gray-900 mb-2">What's included in the Pro plan?</h3>
