--- a/signupmodal.html
+++ b/signupmodal.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Your Account - MasterPlan</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="design-tokens.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
@@ -99,7 +100,7 @@
 
 <body class="antialiased">
     <!-- Initial View -->
-    <div id="initial-view" class="bg-white rounded-2xl shadow-2xl max-w-md w-full p-8 space-y-6">
+    <div id="initial-view" class="bg-white rounded-2xl shadow-2xl max-w-md w-full p-5 space-y-6">
         <div class="text-center">
             <h1 class="text-3xl font-bold text-gray-900 mb-2">One last step!</h1>
             <p class="text-lg text-gray-600">Create a free account to save your plan and access your dashboard.</p>
@@ -141,7 +142,7 @@
     </div>
 
     <!-- Email Form View -->
-    <div id="email-form-view" class="bg-white rounded-2xl shadow-2xl max-w-lg w-full p-8 space-y-6 hidden">
+    <div id="email-form-view" class="bg-white rounded-2xl shadow-2xl max-w-lg w-full p-5 space-y-6 hidden">
         <div class="text-center">
             <button onclick="showInitialView()" class="text-gray-400 hover:text-gray-600 mb-4">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
