--- a/success.html
+++ b/success.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment Successful - MasterPlan</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="design-tokens.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
@@ -77,9 +78,9 @@
     </nav>
 
     <!-- Success Content -->
-    <main class="max-w-4xl mx-auto px-6 py-16">
+    <main class="max-w-4xl mx-auto px-6 py-8">
         <!-- Success Icon -->
-        <div class="text-center mb-8">
+        <div class="text-center mb-4">
             <div
                 class="success-icon w-24 h-24 bg-gradient-to-br from-green-400 to-emerald-500 rounded-full mx-auto flex items-center justify-center mb-6">
                 <svg class="w-12 h-12 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -89,13 +90,13 @@
         </div>
 
         <!-- Success Message -->
-        <div class="text-center space-y-4 mb-12">
+        <div class="text-center space-y-4 mb-6">
             <h1 class="text-4xl md:text-5xl font-bold text-gray-900">Payment Successful!</h1>
             <p class="text-2xl text-gray-600">Welcome to MasterPlan Pro</p>
         </div>
 
         <!-- Confirmation Details -->
-        <div class="bg-white rounded-2xl border border-gray-200 p-8 mb-8 shadow-sm">
+        <div class="bg-white rounded-2xl border border-gray-200 p-5 mb-4 shadow-sm">
             <h2 class="text-2xl font-bold text-gray-900 mb-6">Your Subscription Details</h2>
             <div class="space-y-4">
                 <div class="flex justify-between items-center py-3 border-b border-gray-100">
@@ -115,7 +116,7 @@
 
         <!-- Motivational Message -->
         <div
-            class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border border-indigo-100 p-10 text-center space-y-4 mb-8">
+            class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border border-indigo-100 p-10 text-center space-y-4 mb-4">
             <div class="text-5xl mb-4">🎓</div>
             <h2 class="text-3xl font-bold text-gray-900">Let's Make Your Master Plan Happen!</h2>
             <p class="text-lg text-gray-700 leading-relaxed max-w-2xl mx-auto">
@@ -129,7 +130,7 @@
         </div>
 
         <!-- What's Next -->
-        <div class="bg-white rounded-2xl border border-gray-200 p-8 mb-8 shadow-sm">
+        <div class="bg-white rounded-2xl border border-gray-200 p-5 mb-4 shadow-sm">
             <h2 class="text-2xl font-bold text-gray-900 mb-6">What's Next?</h2>
             <ul class="space-y-4">
                 <li class="flex items-start">
