--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In - MasterPlan</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="design-tokens.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
@@ -62,7 +63,7 @@
 </head>
 
 <body class="antialiased">
-    <div class="bg-white rounded-2xl shadow-2xl max-w-md w-full p-8 space-y-6">
+    <div class="bg-white rounded-2xl shadow-2xl max-w-md w-full p-5 space-y-6">
         <div class="text-center">
             <h1 class="text-3xl font-bold text-gray-900 mb-2">Welcome Back</h1>
             <p class="text-gray-600">Log in to your MasterPlan account</p>
