--- a/results.html
+++ b/results.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Results Dashboard - MasterPlan</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="design-tokens.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
@@ -148,7 +149,7 @@
 
     <!-- Main Content -->
     <div class="max-w-7xl mx-auto px-6 py-8">
-        <div class="lg:grid lg:grid-cols-4 gap-8">
+        <div class="lg:grid lg:grid-cols-4 gap-4">
             <!-- Sidebar Controls -->
             <div class="lg:col-span-1">
                 <button id="sidebar-toggle"
@@ -241,15 +242,15 @@
             <div id="main-content-area" class="lg:col-span-3">
                 <!-- Single Result View -->
                 <main id="single-result-view" class="space-y-8 hidden-view">
-                    <h1 id="single-title" class="text-4xl md:text-5xl font-bold text-center text-gray-900 mb-8">Your
+                    <h1 id="single-title" class="text-4xl md:text-5xl font-bold text-center text-gray-900 mb-4">Your
                         Financial Roadmap: [Program]</h1>
 
                     <!-- New 2-Column Layout (Inflows vs Outflows) -->
-                    <section class="mb-8">
-                        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-8">
+                    <section class="mb-4">
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
                             <!-- Inflows -->
                             <div
-                                class="card-hover bg-white rounded-2xl border-2 border-green-200 p-8 shadow-sm relative overflow-hidden">
+                                class="card-hover bg-white rounded-2xl border-2 border-green-200 p-5 shadow-sm relative overflow-hidden">
                                 <div class="absolute top-0 left-0 w-2 h-full bg-green-500"></div>
                                 <h3 class="text-xl font-bold text-gray-900 mb-6">What You Have (Inflows)</h3>
                                 <div class="space-y-4">
@@ -274,7 +275,7 @@
 
                             <!-- Outflows -->
                             <div
-                                class="card-hover bg-white rounded-2xl border-2 border-red-200 p-8 shadow-sm relative overflow-hidden">
+                                class="card-hover bg-white rounded-2xl border-2 border-red-200 p-5 shadow-sm relative overflow-hidden">
                                 <div class="absolute top-0 left-0 w-2 h-full bg-red-500"></div>
                                 <h3 class="text-xl font-bold text-gray-900 mb-6">What It Costs (Outflows)</h3>
                                 <div class="space-y-4">
@@ -303,7 +304,7 @@
                             id="gap-card">
                             <div class="relative z-10">
                                 <h2 class="text-3xl font-bold text-white mb-3" id="gap-title">Your Funding Gap</h2>
-                                <p class="text-white/90 mb-8 text-lg" id="gap-text">Calculating...</p>
+                                <p class="text-white/90 mb-4 text-lg" id="gap-text">Calculating...</p>
                                 <div class="text-8xl md:text-9xl font-extrabold mb-6 text-white animate-pulse-subtle"
                                     id="funding-gap-display">$0</div>
                                 <p class="text-lg text-white/80 font-semibold" id="gap-subtext">Funding Gap</p>
@@ -312,7 +313,7 @@
 
                         <!-- Action Recommendations Box (only shows when gap > 0) -->
                         <div id="action-recommendations"
-                            class="hidden mt-8 bg-gradient-to-br from-orange-50 to-amber-50 border-2 border-orange-200 rounded-2xl p-8 shadow-lg">
+                            class="hidden mt-8 bg-gradient-to-br from-orange-50 to-amber-50 border-2 border-orange-200 rounded-2xl p-5 shadow-lg">
                             <div class="flex items-start mb-6">
                                 <div class="text-4xl mr-4">💡</div>
                                 <div>
@@ -376,7 +377,7 @@
 
                         <!-- Comparison Preview Teaser -->
                         <div id="comparison-preview"
-                            class="mt-8 bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border-2 border-indigo-200 p-8 shadow-lg">
+                            class="mt-8 bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border-2 border-indigo-200 p-5 shadow-lg">
                             <div class="text-center mb-6">
                                 <h3 class="text-2xl font-bold text-gray-900 mb-2">How does this compare?</h3>
                                 <p class="text-gray-600">Students with similar profiles also considered these programs
@@ -396,7 +397,7 @@
                         </div>
 
                         <!-- Comparison Card (Task C) -->
-                        <div class="mt-8 border-2 border-dashed border-gray-300 rounded-2xl p-8 text-center cursor-pointer hover:border-indigo-500 hover:bg-indigo-50 transition-all group"
+                        <div class="mt-8 border-2 border-dashed border-gray-300 rounded-2xl p-5 text-center cursor-pointer hover:border-indigo-500 hover:bg-indigo-50 transition-all group"
                             onclick="startComparison()">
                             <div class="text-4xl mb-2 text-gray-400 group-hover:text-indigo-500 transition-colors">+
                             </div>
@@ -408,15 +409,15 @@
 
                     <!-- Today View -->
                     <section
-                        class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border border-indigo-100 p-8 shadow-sm">
+                        class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border border-indigo-100 p-5 shadow-sm">
                         <h2 class="text-2xl font-bold text-gray-900 mb-6 text-center">Where You Are Today</h2>
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                            <div class="bg-white p-8 rounded-xl shadow-md">
+                            <div class="bg-white p-5 rounded-xl shadow-md">
                                 <p class="text-sm text-gray-600 mb-2">Your Current Bank Balance</p>
                                 <p id="today-balance" class="text-5xl font-bold text-green-600">$0</p>
                                 <p class="text-xs text-gray-500 mt-2">Available funds right now</p>
                             </div>
-                            <div class="bg-white p-8 rounded-xl shadow-md">
+                            <div class="bg-white p-5 rounded-xl shadow-md">
                                 <p class="text-sm text-gray-600 mb-2">Next Payment Due</p>
                                 <p id="today-next-payment" class="text-5xl font-bold text-orange-600">$0</p>
                                 <p class="text-xs text-gray-500 mt-2">Due end of this month</p>
@@ -425,7 +426,7 @@
                     </section>
 
                     <!-- 24-Month Cash Flow -->
-                    <section class="bg-white rounded-2xl border border-gray-200 p-8 shadow-sm">
+                    <section class="bg-white rounded-2xl border border-gray-200 p-5 shadow-sm">
                         <h2 class="text-2xl font-bold text-gray-900 mb-2">Your 24-Month Bank Balance</h2>
                         <p class="text-gray-600 mb-6">This chart shows your bank balance over time. The red line is your
                             "Funding Gap".</p>
@@ -441,9 +442,9 @@
                         </div>
                     </section>
 
-                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
                         <!-- Monthly Expense Chart -->
-                        <section class="bg-white rounded-2xl border border-gray-200 p-8 shadow-sm">
+                        <section class="bg-white rounded-2xl border border-gray-200 p-5 shadow-sm">
                             <h2 class="text-xl font-bold text-gray-900 mb-2">Monthly Expense Chart</h2>
                             <p class="text-sm text-gray-600 mb-6">Note the spikes for tuition payments in September and
                                 January.</p>
@@ -453,7 +454,7 @@
                         </section>
 
                         <!-- Expense Breakdown Pie Chart -->
-                        <section class="bg-white rounded-2xl border border-gray-200 p-8 shadow-sm">
+                        <section class="bg-white rounded-2xl border border-gray-200 p-5 shadow-sm">
                             <h2 id="single-chart-title" class="text-xl font-bold text-gray-900 mb-2">Living Cost
                                 Breakdown</h2>
                             <p class="text-sm text-gray-600 mb-6">A breakdown of your *monthly* living expenses.</p>
@@ -466,17 +467,17 @@
 
                 <!-- Compare Result View -->
                 <main id="compare-result-view" class="space-y-8 hidden-view">
-                    <h1 class="text-4xl md:text-5xl font-bold text-center text-gray-900 mb-8">Your Roadmap Comparison
+                    <h1 class="text-4xl md:text-5xl font-bold text-center text-gray-900 mb-4">Your Roadmap Comparison
                     </h1>
-                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
-                        <section class="bg-white rounded-2xl border border-gray-200 text-center p-8 shadow-sm">
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
+                        <section class="bg-white rounded-2xl border border-gray-200 text-center p-5 shadow-sm">
                             <h2 id="compare-name-a" class="text-2xl font-bold text-gray-900 mb-4">[Program A]</h2>
                             <p class="text-lg text-gray-700 mb-2">Total Funding Gap:</p>
                             <p id="compare-gap-a" class="text-6xl md:text-7xl font-bold text-red-600 my-4">$22,000</p>
                             <p class="text-md text-gray-600">Starting Balance: <span id="compare-balance-a"
                                     class="font-semibold">$43,000</span></p>
                         </section>
-                        <section class="bg-white rounded-2xl border border-gray-200 text-center p-8 shadow-sm">
+                        <section class="bg-white rounded-2xl border border-gray-200 text-center p-5 shadow-sm">
                             <h2 id="compare-name-b" class="text-2xl font-bold text-gray-900 mb-4">[Program B]</h2>
                             <p class="text-lg text-gray-700 mb-2">Total Funding Gap:</p>
                             <p id="compare-gap-b" class="text-6xl md:text-7xl font-bold text-green-600 my-4">$14,500</p>
@@ -484,15 +485,15 @@
                                     class="font-semibold">$43,000</span></p>
                         </section>
                     </div>
-                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
-                        <section class="bg-white rounded-2xl border border-gray-200 p-8 shadow-sm">
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
+                        <section class="bg-white rounded-2xl border border-gray-200 p-5 shadow-sm">
                             <h2 id="compare-chart-title-a" class="text-xl font-bold text-gray-900 mb-6">24-Month Cash
                                 Flow: [Program A]</h2>
                             <div class="w-full h-80">
                                 <canvas id="compare-chart-a"></canvas>
                             </div>
                         </section>
-                        <section class="bg-white rounded-2xl border border-gray-200 p-8 shadow-sm">
+                        <section class="bg-white rounded-2xl border border-gray-200 p-5 shadow-sm">
                             <h2 id="compare-chart-title-b" class="text-xl font-bold text-gray-900 mb-6">24-Month Cash
                                 Flow: [Program B]</h2>
                             <div class="w-full h-80">
