--- a/simulator.html
+++ b/simulator.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Your Financial Plan - MasterPlan</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="design-tokens.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
@@ -193,7 +194,7 @@
                             </svg>
                         </div>
                         <h2 class="text-3xl font-bold text-gray-900 mb-3">Create Your Account First</h2>
-                        <p class="text-gray-600 mb-8">To start creating your financial plan, please create a free account. It only takes a minute!</p>
+                        <p class="text-gray-600 mb-4">To start creating your financial plan, please create a free account. It only takes a minute!</p>
                         <div class="space-y-3">
                             <a href="signupmodal.html" class="gradient-bg text-white px-8 py-4 rounded-xl font-semibold hover:shadow-2xl transition-all transform hover:-translate-y-1 inline-block w-full">
                                 Create Free Account
@@ -260,8 +261,8 @@
     </nav>
 
     <!-- Main Content -->
-    <main class="max-w-6xl mx-auto px-6 py-12" id="main-content">
-        <div class="text-center mb-12">
+    <main class="max-w-6xl mx-auto px-6 py-6" id="main-content">
+        <div class="text-center mb-6">
             <h1 id="page-title" class="text-4xl md:text-5xl font-bold text-gray-900 mb-4">Create Your Financial Plan
             </h1>
             <p id="page-subtitle" class="text-xl text-gray-600">5 questions between you and clarity
@@ -269,7 +270,7 @@
         </div>
 
         <!-- Progress Bar -->
-        <div class="bg-white rounded-2xl border border-gray-200 p-6 mb-8 shadow-sm">
+        <div class="bg-white rounded-2xl border border-gray-200 p-6 mb-4 shadow-sm">
             <div class="flex justify-around flex-wrap gap-2">
                 <div class="step-indicator" id="step-1-indicator">1. Programs</div>
                 <div class="step-indicator" id="step-2-indicator">2. Funds</div>
@@ -282,11 +283,11 @@
 
 
         <!-- Step 1: Programs -->
-        <section id="step-1" class="bg-white rounded-2xl border border-gray-200 p-8 mb-8 shadow-sm">
+        <section id="step-1" class="bg-white rounded-2xl border border-gray-200 p-5 mb-4 shadow-sm">
             <h2 class="text-2xl font-bold text-gray-900 mb-6">Step 1: Find Your Program</h2>
 
             <!-- Single Intelligent Search Bar -->
-            <div class="mb-8">
+            <div class="mb-4">
                 <label class="block text-sm font-semibold text-gray-700 mb-3">Search for university or program</label>
                 <div class="relative">
                     <div class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none">
@@ -853,7 +854,7 @@
         </script>
 
         <!-- Step 2: Funds -->
-        <section class="bg-white rounded-2xl border border-gray-200 p-8 mb-8 shadow-sm">
+        <section class="bg-white rounded-2xl border border-gray-200 p-5 mb-4 shadow-sm">
             <h2 class="text-2xl font-bold text-gray-900 mb-6">Step 2: Enter Your Available Funds</h2>
             <div class="max-w-md mx-auto space-y-5">
                 <div>
@@ -872,7 +873,7 @@
         </section>
 
         <!-- Step 3: Hidden Costs (One-time & Annual) -->
-        <section class="bg-white rounded-2xl border border-gray-200 p-8 mb-8 shadow-sm">
+        <section class="bg-white rounded-2xl border border-gray-200 p-5 mb-4 shadow-sm">
             <h2 class="text-2xl font-bold text-gray-900 mb-6">Step 3: One-time & Annual Expenses</h2>
             <p class="text-gray-600 mb-6">Estimate these often overlooked costs to get a realistic plan.</p>
 
@@ -899,7 +900,7 @@
         </section>
 
         <!-- Step 4: Lifestyle -->
-        <section class="bg-white rounded-2xl border border-gray-200 p-8 mb-8 shadow-sm">
+        <section class="bg-white rounded-2xl border border-gray-200 p-5 mb-4 shadow-sm">
             <div class="flex justify-between items-center mb-6">
                 <h2 class="text-2xl font-bold text-gray-900">Step 4: Define Your Lifestyle</h2>
 
@@ -915,7 +916,7 @@
                 category</p>
 
             <!-- Interactive Lifestyle Calculator -->
-            <div class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border-2 border-indigo-200 p-8">
+            <div class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border-2 border-indigo-200 p-5">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
                     <!-- Food & Dining -->
                     <div class="bg-white rounded-xl p-5 shadow-sm">
@@ -1054,7 +1055,7 @@
         </section>
 
         <!-- Step 5: Income -->
-        <section class="bg-white rounded-2xl border border-gray-200 p-8 mb-8 shadow-sm">
+        <section class="bg-white rounded-2xl border border-gray-200 p-5 mb-4 shadow-sm">
             <h2 class="text-2xl font-bold text-gray-900 mb-6">Step 5: Will You Have Additional Income?</h2>
 
             <div class="space-y-8">
